force-app/main/default/objects/Attached_Inclusions__c/Attached_Inclusions__c.object-meta.xml
<CustomObject>
    <label>Attached Inclusions</label>
    <nameField>
        <displayFormat>AttInc-{0000000}</displayFormat>
        <label>Attached Inclusions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attached Inclusions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>