force-app/main/default/objects/Attached_Inclusions__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Attached Inclusions</relationshipLabel>
    <relationshipName>Attached_Inclusions</relationshipName>
    <type>Lookup</type>
</CustomField>