force-app/main/default/objects/Attached_Inclusions__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <formula>Publishing_Inclusions__r.Icon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icon</label>
    <type>Text</type>
</CustomField>