force-app/main/default/objects/Attached_Inclusions__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Options</label>
    <referenceTo>options__c</referenceTo>
    <relationshipLabel>Attached Inclusions</relationshipLabel>
    <relationshipName>Attached_Inclusions</relationshipName>
    <type>Lookup</type>
</CustomField>