force-app/main/default/objects/Attached_Inclusions__c/fields/Publishing_Inclusions__c.field-meta.xml
<CustomField>
    <fullName>Publishing_Inclusions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publishing Inclusions</label>
    <referenceTo>Publishing_Inclusions__c</referenceTo>
    <relationshipLabel>Attached Inclusions</relationshipLabel>
    <relationshipName>Attached_Inclusions</relationshipName>
    <type>Lookup</type>
</CustomField>