force-app/main/default/objects/Attached_Inclusions__c/fields/Selected_Inclusion_Detail__c.field-meta.xml
<CustomField>
    <fullName>Selected_Inclusion_Detail__c</fullName>
    <label>Selected Inclusion Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>