force-app/main/default/objects/Attached_Inclusions__c/recordTypes/About_the_property.recordType-meta.xml
<RecordType>
    <fullName>About_the_property</fullName>
    <active>true</active>
    <description>About the property</description>
    <label>About the property</label>
</RecordType>