force-app/main/default/objects/Attached_Inclusions__c/recordTypes/Deal_Highlights.recordType-meta.xml
<RecordType>
    <fullName>Deal_Highlights</fullName>
    <active>true</active>
    <description>Deal - Highlights</description>
    <label>Deal - Highlights</label>
</RecordType>