force-app/main/default/objects/Attached_Inclusions__c/recordTypes/Deal_Inclusions.recordType-meta.xml
<RecordType>
    <fullName>Deal_Inclusions</fullName>
    <active>true</active>
    <description>Deal - Inclusions</description>
    <label>Deal - Inclusions</label>
</RecordType>