force-app/main/default/objects/Attached_Inclusions__c/recordTypes/Hotel_Facilities.recordType-meta.xml
<RecordType>
    <fullName>Hotel_Facilities</fullName>
    <active>true</active>
    <description>Hotel Facilities</description>
    <label>Hotel Facilities</label>
</RecordType>