force-app/main/default/objects/Attached_Inclusions__c/recordTypes/Overview.recordType-meta.xml
<RecordType>
    <fullName>Overview</fullName>
    <active>true</active>
    <description>Overview</description>
    <label>Overview</label>
</RecordType>