force-app/main/default/objects/Attached_Inclusions__c/recordTypes/Room_Config.recordType-meta.xml
<RecordType>
    <fullName>Room_Config</fullName>
    <active>true</active>
    <label>Room Config</label>
</RecordType>