force-app/main/default/objects/Attached_Inclusions__c/recordTypes/Room_Description.recordType-meta.xml
<RecordType>
    <fullName>Room_Description</fullName>
    <active>true</active>
    <description>Room Description</description>
    <label>Room Description</label>
</RecordType>