force-app/main/default/objects/Attached_Inclusions__c/recordTypes/Room_Facilities.recordType-meta.xml
<RecordType>
    <fullName>Room_Facilities</fullName>
    <active>true</active>
    <description>Room Facilities</description>
    <label>Room Facilities</label>
</RecordType>