force-app/main/default/objects/Attached_Inclusions__c/recordTypes/Summary_Overview.recordType-meta.xml
<RecordType>
    <fullName>Summary_Overview</fullName>
    <active>true</active>
    <description>Summary - Overview</description>
    <label>Summary - Overview</label>
</RecordType>