force-app/main/default/objects/Attached_Inclusions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>Type__c</columns>
    <columns>Text__c</columns>
    <columns>Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>